# mclauncher

./: .editorconfig  .eslintrc.json  .gitignore  Makefile  README.md  TODO  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: run-tests.yml  tauri-test.yml  tauri-upload-artifact.yml
__tests__/: example.test.ts  example.test.tsx  t.tsx  test-utils.tsx
__tests__/locators/: instances.ts  newInstanceForm.tsx  select.ts  settingsForm.tsx  textInput.tsx
__tests__/units/: toast.test.tsx
src/: App.tsx  common.css  i18n.ts  main.tsx
src-tauri/: Cargo.toml  config.json  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/client/: launcher_client.rs  log.rs  mod.rs
src-tauri/src/domain/: mod.rs  os.rs  version.rs
src-tauri/src/domain/vanilla/: download.rs  get.rs  launch.rs  mod.rs
src-tauri/src/downloader/: download_manager.rs
src-tauri/src/instances/: instance.rs
src-tauri/src/launcher_config/: config.rs
src-tauri/src/utils/: get_libs_list.rs  mod.rs
src/assets/locales/: en.json  ru.json
src/components/App/: App.style.ts  App.tsx  AppContainer.tsx  context.tsx  index.ts
src/components/Header/: Header.style.ts  Header.tsx  index.ts
src/components/Instance/: Instance.style.ts  Instance.tsx  InstanceContainer.tsx  index.ts
src/components/Instances/: Instances.style.ts  Instances.test.tsx  Instances.tsx  InstancesContainer.tsx  context.tsx  index.ts
src/messages/: events.ts  index.ts
src/theme/: theme.ts
src/types/: instance.ts  version.ts
(+38 files in other folders)
