[package]
name = "minecraft_launcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0", features = [] }

[dependencies]
tauri = { version = "1.0.0", features = ["api-all"] }
# serde_json = "1.0"
serde_json = "1.0.85"
# serde = { version = "1.0", features = ["derive"] }
serde = { version = "1.0.141", features = ["derive"] }
itertools = "0.10.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
futures = "0.3.21"
thiserror = "1.0.32"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
